# bootcamp2

./: README.md
day1/: README.md
day1/bootcamp2_urdf_description/: CMakeLists.txt  package.xml
day1/bootcamp2_urdf_description/launch/: controller.yaml  realAndRviz.launch
day1/bootcamp2_urdf_description/meshes/: L3_1.stl  base_link.stl
day1/bootcamp2_urdf_description/urdf/: bootcamp2_urdf.trans  bootcamp2_urdf.urdf  bootcamp2_urdf.xacro  bootcamp2_urdf.xml  bootcamp2_urdf_answer.urdf
day2/bootcamp2_control/: CMakeLists.txt  package.xml
day2/bootcamp2_control/include/bootcamp2_control/: bootcamp_control.h
day2/bootcamp2_control/src/: bootcamp_comm.cpp  bootcamp_dxl_sync.cpp
day2/bootcamp2_pinocchio/: CMakeLists.txt  package.xml
day2/bootcamp2_pinocchio/src/: bootcamp_pinocchio.cpp
day3/multithread/thread/: 2_1_thread.cpp  2_2_thread2.cpp  2_3_datarace.cpp  2_3_datarace_atomic_mod.cpp  2_3_datarace_mutex_lockguard.cpp  2_3_datarace_mutex_mod.cpp  2_4_datarace_atomic.cpp  2_5_datarace_mutex.cpp  2_6_datarace_mutex_lockguard.cpp  2_7_advanced_thread_with_class_mutex.cpp  2_8_advanced_thread_with_class_atomic.cpp  2_9_examples_of_mutex_bad.cpp  2_9_examples_of_mutex_good.cpp  build_test.sh
day3/realtime/: rt_bootcamp.cpp
day3/rqt_dyros_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
day3/rqt_dyros_gui/include/rqt_dyros_gui/: rqt_dyros_gui.h
day3/rqt_dyros_gui/scripts/: rqt_dyros_gui.py
day3/rqt_dyros_gui/src/: rqt_dyros_gui.cpp  rqt_dyros_gui.ui
day4/bootcamp2_cc/: CMakeLists.txt  package.xml
day4/bootcamp2_cc/include/bootcamp2_cc/: cc.h
day4/bootcamp2_cc/src/: cc.cpp
day4/bootcamp2_urdf_description/: CMakeLists.txt  package.xml
day4/bootcamp2_urdf_description/launch/: controller.launch  dyros_root_display_launch.py  gazebo.launch  lauch.launch.py  realAndRviz_launch.xml  rviz_only_launch.py
day4/bootcamp2_urdf_description/meshes/: L1_1.stl  L2_1.stl  L4_1.stl  L5_1.stl  L6_1.stl  LE_1.stl
day4/bootcamp2_urdf_description/urdf/: bootcamp2_urdf.gazebo  materials.xacro
